# torah_tools

./: .gitignore  README.md  pyproject.toml
in/enrich_nekudos/: library_lekkutei_amarim.txt
in/misc/: roshi_taivos.json  roshi_taivos.txt
in/split_pages/: iggeres_teshuva.txt  lekkutei_amarim.txt  shaar_blatt_hakdamos.txt
src/torah_tools/: __main__.py
src/torah_tools/holy_scrape/: scrapy.cfg
src/torah_tools/holy_scrape/holy_scrape/: items.py  middlewares.py  pipelines.py  settings.py
src/torah_tools/holy_scrape/holy_scrape/spiders/: chabad_library_spider.py
